# testcalendar

./: AuthManagerTest.cpp  CMakeLists.txt  EventTest.cpp  NetworkManagerTest.cpp  authmanager.hpp  event.cpp  event.hpp  events.csv  loginwindow.cpp  loginwindow.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  networkmanager.cpp  networkmanager.hpp  signupdialog.cpp  signupdialog.hpp  syncdialog.cpp  syncdialog.hpp  test_CMakeLists.txt  users_database.txt
